v7: Fix the carsoell images to be sized how we had them before so that we can see about 5 in view at a time with proper top bottom spacing

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h1 {
     height: 100%;
     justify-content: flex-start;
     overflow: hidden; /* hide overflow to show only 5 at a time */
+    padding-block: 1vmin;
 }
 
 .side-panel::-webkit-scrollbar {
